# AI-Critique

./: README.md  main.py  pyproject.toml
utils/: file_handler.py  gemini_model.py  pdf_breaker.py  pdf_generator.py
